--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,4 +13,4 @@ jobs:
     steps:
     - uses: actions/checkout@master
     - name: Run a one-line script
-      run: ls -lah $PWD
+      run: tarantoolctl rocks make
